--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -5,7 +5,8 @@ linux-2.6 (2.6.39~rc6-1~experimental.2) experimental; urgency=low
   * [x86/486] Enable modular XO1_RFKILL, XO15_EBOOK.
   * topconfig: Enable modular NF_CONNTRACK_TIMESTAMP, NF_CONNTRACK_SNMP,
     NETFILTER_XT_TARGET_AUDIT, NETFILTER_XT_MATCH_ADDRTYPE,
-    NETFILTER_XT_MATCH_DEVGROUP, NET_SCH_SFB, NET_SCH_MQPRIO, NET_SCH_CHOKE.
+    NETFILTER_XT_MATCH_DEVGROUP, NET_SCH_SFB, NET_SCH_MQPRIO, NET_SCH_CHOKE,
+    PATA_ARASAN_CF.
 
  -- maximilian attems <maks@debian.org>  Mon, 09 May 2011 11:53:05 +0200
 
