--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,6 +7,8 @@ linux-2.6 (2.6.39~rc6-1~experimental.2) experimental; urgency=low
     NETFILTER_XT_TARGET_AUDIT, NETFILTER_XT_MATCH_ADDRTYPE,
     NETFILTER_XT_MATCH_DEVGROUP, NET_SCH_SFB, NET_SCH_MQPRIO, NET_SCH_CHOKE,
     SATA_ACARD_AHCI, PATA_ARASAN_CF, SCSI_BNX2X_FCOE.
+  * Add nl debconf template translation. (closes: #622967)
+    Thanks willem kuyn <willemkuyn@gmail.com>.
 
  -- maximilian attems <maks@debian.org>  Mon, 09 May 2011 11:53:05 +0200
 
