--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (2.6.39~rc7-1~experimental.2) experimental; urgency=low
+
+  * [x86] Enable CRYPTO_AES_NI_INTEL for all flavours. (closes: #623631)
+
+ -- maximilian attems <maks@debian.org>  Tue, 10 May 2011 23:24:26 +0200
+
 linux-2.6 (2.6.39~rc7-1~experimental.1) experimental; urgency=low
 
   * [x86] Enable modular ASUS_WMI and ASUS_NB_WMI. (closes: #626141)
