--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,7 +1,8 @@
 linux-2.6 (2.6.39~rc7-1~experimental.2) experimental; urgency=low
 
   * [x86] Enable CRYPTO_AES_NI_INTEL for all flavours. (closes: #623631)
-  * topconfig: Enable SND_USB_6FIRE, SND_FIREWIRE_SPEAKERS.
+  * topconfig: Enable SND_USB_6FIRE, SND_FIREWIRE_SPEAKERS,
+    MEDIA_CONTROLLER.
 
  -- maximilian attems <maks@debian.org>  Tue, 10 May 2011 23:24:26 +0200
 
