--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (2.6.39~rc7-1~experimental.2) experimental; urgency=low
+linux-2.6 (2.6.39~rc7-1~experimental.2) UNRELEASED; urgency=low
 
   * [x86] Enable CRYPTO_AES_NI_INTEL for all flavours. (closes: #623631)
   * topconfig: Enable SND_USB_6FIRE, SND_FIREWIRE_SPEAKERS,
