--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,7 +3,7 @@ linux-2.6 (2.6.39~rc7-1~experimental.2) UNRELEASED; urgency=low
   * [x86] Enable CRYPTO_AES_NI_INTEL for all flavours. (closes: #623631)
   * topconfig: Enable SND_USB_6FIRE, SND_FIREWIRE_SPEAKERS,
     MEDIA_CONTROLLER, DVB_USB_TECHNISAT_USB2, USB_GSPCA_NW80X,
-    USB_GSPCA_VICAM, XEN_WDT.
+    USB_GSPCA_VICAM, XEN_WDT, LOOPBACK_TARGET.
   * [x86] Enable modular XEN_NETDEV_BACKEND.
   * topconfig enable mem cgroup RESOURCE_COUNTERS, CGROUP_MEM_RES_CTLR.
     (closes: #534964)
