--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -7,6 +7,7 @@ linux-2.6 (3.2.4-1) UNRELEASED; urgency=low
     - eCryptfs: Make truncate path killable
     - eCryptfs: Check inode changes in setattr
     - drm/i915: paper over missed irq issues with force wake voodoo
+    - tpm_tis: add delay after aborting command (Closes: #649033)
     - USB: ftdi_sio: fix initial baud rate (Closes: #658164)
     - USB: Realtek cr: fix autopm scheduling while atomic (Closes: #656724)
 
