--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -17,6 +17,9 @@ linux-2.6 (3.2.4-1) UNRELEASED; urgency=low
   * PCI: Rework ASPM disable code (fixes power usage regression on some
     systems)
 
+  [ Bastian Blank ]
+  * Remove unneeded scmversion workaround.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 02 Feb 2012 03:18:04 +0000
 
 linux-2.6 (3.2.2-1) unstable; urgency=low
