--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.2.4-1) UNRELEASED; urgency=low
+linux-2.6 (3.2.4-1) unstable; urgency=low
 
   * New upstream stable update:
     http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.3
@@ -20,7 +20,7 @@ linux-2.6 (3.2.4-1) UNRELEASED; urgency=low
   [ Bastian Blank ]
   * Remove unneeded scmversion workaround.
 
- -- Ben Hutchings <ben@decadent.org.uk>  Thu, 02 Feb 2012 03:18:04 +0000
+ -- Bastian Blank <waldi@debian.org>  Sun, 05 Feb 2012 15:42:21 +0100
 
 linux-2.6 (3.2.2-1) unstable; urgency=low
 
