--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -10,6 +10,10 @@ linux-2.6 (3.2.4-2) UNRELEASED; urgency=low
   [ Arnaud Patard ]
   * Merge ixp4xx oops fix when probing mtd.
 
+  [ Ben Hutchings ]
+  * Change linux-image dependencies to allow kmod as an alternative to
+    module-init-tools
+
  -- Bastian Blank <waldi@debian.org>  Mon, 06 Feb 2012 11:22:07 +0100
 
 linux-2.6 (3.2.4-1) unstable; urgency=low
