--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,19 @@
-linux-2.6 (3.2.4-2) UNRELEASED; urgency=low
+linux-2.6 (3.2.6-1) UNRELEASED; urgency=low
+
+  * New upstream stable update:
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.5
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.6
+    - ALSA: hda - Apply 0x0f-VREF fix to all ASUS laptops with ALC861/660
+      (Closes: #657302)
+    - [armhf] vfp: flush thread hwstate before restoring context from sigframe
+    - proc: mem_release() should check mm != NULL
+    - proc: make sure mem_open() doesnt pin the targets memory
+    - [arm] sched/rt: Fix task stack corruption under
+      __ARCH_WANT_INTERRUPTS_ON_CTXSW
+    - eCryptfs: Infinite loop due to overflow in ecryptfs_write()
+    - iscsi-target: Fix reject release handling in iscsit_free_cmd()
+    - iscsi-target: Fix double list_add with iscsit_alloc_buffs reject
+    - pcmcia: fix socket refcount decrementing on each resume
 
   [ Aurelien Jarno ]
   * hwmon: backport IT8728F support for linux 3.3. 
