--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -28,6 +28,7 @@ linux-2.6 (3.2.6-1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * Change linux-image dependencies to allow kmod as an alternative to
     module-init-tools
+  * relay: prevent integer overflow in relay_open()
 
  -- Bastian Blank <waldi@debian.org>  Mon, 06 Feb 2012 11:22:07 +0100
 
