--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -29,6 +29,7 @@ linux-2.6 (3.2.6-1) UNRELEASED; urgency=low
   * Change linux-image dependencies to allow kmod as an alternative to
     module-init-tools
   * relay: prevent integer overflow in relay_open()
+  * builddeb: Don't create files in /tmp with predictable names
 
  -- Bastian Blank <waldi@debian.org>  Mon, 06 Feb 2012 11:22:07 +0100
 
