--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.2.6-1) UNRELEASED; urgency=low
+linux-2.6 (3.2.6-1) unstable; urgency=low
 
   * New upstream stable update:
     http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.5
@@ -32,7 +32,7 @@ linux-2.6 (3.2.6-1) UNRELEASED; urgency=low
   * builddeb: Don't create files in /tmp with predictable names
   * ath9k: fix a WEP crypto related regression (Closes: #659484)
 
- -- Bastian Blank <waldi@debian.org>  Mon, 06 Feb 2012 11:22:07 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 16 Feb 2012 02:38:38 +0000
 
 linux-2.6 (3.2.4-1) unstable; urgency=low
 
