--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.3-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.3-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.3
 
@@ -7,7 +7,7 @@ linux-2.6 (3.3-1~experimental.1) UNRELEASED; urgency=low
   * aufs: Update to aufs3.x-rcN-20120312
   * IB: Enable INFINIBAND_SRPT as module (Closes: #663041)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Fri, 09 Mar 2012 05:27:29 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Wed, 21 Mar 2012 03:08:36 +0000
 
 linux-2.6 (3.3~rc6-1~experimental.1) experimental; urgency=low
 
