--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -3,6 +3,9 @@ linux-2.6 (3.3.1-1~experimental.1) UNRELEASED; urgency=low
   * New upstream stable update:
     http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.3.1
 
+  [ Ben Hutchings ]
+  * [armel/iop32x] Add missing #includes (fixes FTBFS)
+
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 06 Apr 2012 20:35:03 +0100
 
 linux-2.6 (3.3-1~experimental.1) experimental; urgency=low
