--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.3.2-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.3.2-1~experimental.1) experimental; urgency=low
 
   * New upstream stable update:
     http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.3.1
@@ -7,7 +7,7 @@ linux-2.6 (3.3.2-1~experimental.1) UNRELEASED; urgency=low
   [ Ben Hutchings ]
   * [armel/iop32x] Add missing #includes (fixes FTBFS)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Fri, 06 Apr 2012 20:35:03 +0100
+ -- Ben Hutchings <ben@decadent.org.uk>  Sun, 15 Apr 2012 16:36:13 +0100
 
 linux-2.6 (3.3-1~experimental.1) experimental; urgency=low
 
