--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,9 @@
+linux-2.6 (3.4-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release: http://kernelnewbies.org/Linux_3.4
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 21 May 2012 01:37:21 +0100
+
 linux-2.6 (3.3.6-1~experimental.1) experimental; urgency=low
 
   * New upstream stable update:
