--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,7 +2,7 @@ linux-2.6 (3.4-1~experimental.1) UNRELEASED; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.4
 
-  * Enable DM_VERITY.
+  * Enable DM_VERITY, NF_CONNTRACK_TIMEOUT, NF_CT_NETLINK_TIMEOUT.
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 21 May 2012 01:37:21 +0100
 
