--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -6,7 +6,7 @@ linux-2.6 (3.4-1~experimental.1) UNRELEASED; urgency=low
   * Enable DM_VERITY, NF_CONNTRACK_TIMEOUT, NF_CT_NETLINK_TIMEOUT,
     IP_NF_MATCH_RPFILTER, IP6_NF_MATCH_RPFILTER, NETFILTER_NETLINK_ACCT,
     NETFILTER_XT_MATCH_NFACCT, NET_SCH_PLUG, SCSI_UFSHCD, SCSI_VIRTIO,
-    NET_CALXEDA_XGMAC, NET_TEAM, ATH6KL.
+    NET_TEAM, ATH6KL.
 
   [ Ben Hutchings ]
   * DFSG: Remove the new vs6624 driver, which contains non-free firmware
