--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.4.1-1~experimental.1) UNRELEASED; urgency=low
+linux-2.6 (3.4.1-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.4
   * New upstream stable update:
@@ -15,7 +15,7 @@ linux-2.6 (3.4.1-1~experimental.1) UNRELEASED; urgency=low
   * aufs: Update to aufs3.4-20120521
   * [rt] Update to 3.4-rt8 and reenable
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 21 May 2012 01:37:21 +0100
+ -- maximilian attems <maks@debian.org>  Wed, 06 Jun 2012 10:25:57 +0200
 
 linux-2.6 (3.3.6-1~experimental.1) experimental; urgency=low
 
