--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,3 +1,10 @@
+linux-2.6 (3.4.1-1~experimental.2) UNRELEASED; urgency=low
+
+  [ Ben Hutchings ]
+  * [ia64] Export <asm/cmpxchg.h> to userland (fixes FTBFS)
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Jun 2012 04:45:03 +0100
+
 linux-2.6 (3.4.1-1~experimental.1) experimental; urgency=low
 
   * New upstream release: http://kernelnewbies.org/Linux_3.4
