--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -2,6 +2,7 @@ linux-2.6 (3.4.1-1~experimental.2) UNRELEASED; urgency=low
 
   [ Ben Hutchings ]
   * [ia64] Export <asm/cmpxchg.h> to userland (fixes FTBFS)
+  * [x86] Enable BATTERY_SBS as module (Closes: #662902)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Jun 2012 04:45:03 +0100
 
