--- a/linux-2.6/debian/changelog
+++ b/linux-2.6/debian/changelog
@@ -1,4 +1,7 @@
-linux-2.6 (3.4.1-1~experimental.2) UNRELEASED; urgency=low
+linux-2.6 (3.4.2-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream stable update:
+    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.4.2
 
   [ Ben Hutchings ]
   * [ia64] Export <asm/cmpxchg.h> to userland (fixes FTBFS)
