--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -2,7 +2,7 @@ firmware-free (3.1) UNRELEASED; urgency=low
 
   * Update to linux-support 3.2.0-2
     - Remove build-dependency, as this is only used when preparing the
-      source package
+      source package (Closes: #629730)
   * Add isci parameter blob
   * Add makefiles and scripts for av7110, dsp56k and keyspan_pda firmware
   * debian/control: Set Multi-Arch: foreign to allow for installation
