--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -8,6 +8,8 @@ firmware-free (3.1) UNRELEASED; urgency=low
   * debian/control: Set Multi-Arch: foreign to allow for installation
     of foreign linux-image packages
   * Add firmware for ITL USB-DUXsigma
+  * Set the upstream homepage URL to the current gitweb page for
+    linux-firmware.git
 
  -- Ben Hutchings <ben@decadent.org.uk>  Thu, 29 Dec 2011 19:09:09 +0100
 
