--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -7,6 +7,9 @@ linux-tools (3.6-1~experimental.1) UNRELEASED; urgency=low
     generate an xz-compressed orig tarball, thanks to Sedat Dilek
   * source: Enable xz-compression for debian directory tarball
 
+  [ Jonathan Nieder ]
+  * Add myself to uploaders list.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 21 Aug 2012 05:05:42 +0100
 
 linux-tools (3.5-1~experimental.1) experimental; urgency=low
