--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,3 +1,9 @@
+firmware-free (3.2) UNRELEASED; urgency=low
+
+  * Update to linux-support 3.2.0-4
+
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 14 Jan 2013 11:31:51 +0000
+
 firmware-free (3.1) unstable; urgency=low
 
   * Update to linux-support 3.2.0-2
