--- a/firmware-free/debian/changelog
+++ b/firmware-free/debian/changelog
@@ -1,9 +1,9 @@
-firmware-free (3.2) UNRELEASED; urgency=low
+firmware-free (3.2) unstable; urgency=low
 
   * Update to linux-support 3.2.0-4
   * Add Atheros AR9170 free firmware for use with carl9170 (Closes: #635840)
 
- -- Ben Hutchings <ben@decadent.org.uk>  Mon, 14 Jan 2013 11:31:51 +0000
+ -- Ben Hutchings <ben@decadent.org.uk>  Mon, 14 Jan 2013 22:02:47 +0000
 
 firmware-free (3.1) unstable; urgency=low
 
