--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,4 +1,6 @@
-linux-tools (3.7.1-1~experimental.2) UNRELEASED; urgency=low
+linux-tools (3.8-1~experimental.1) UNRELEASED; urgency=low
+
+  * New upstream release
 
  -- Jonathan Nieder <jrnieder@gmail.com>  Sat, 29 Dec 2012 22:51:43 -0800
 
