--- a/linux-tools/debian/changelog
+++ b/linux-tools/debian/changelog
@@ -1,4 +1,4 @@
-linux-tools (3.8.2-1~experimental.1) UNRELEASED; urgency=low
+linux-tools (3.8.2-1~experimental.1) experimental; urgency=low
 
   * New upstream release (Closes: #702450)
 
@@ -6,7 +6,7 @@ linux-tools (3.8.2-1~experimental.1) UNRELEASED; urgency=low
   * linux-tools: Install bash_completion script for perf with a version-
     dependent name (Closes: #701790)
 
- -- Jonathan Nieder <jrnieder@gmail.com>  Sat, 29 Dec 2012 22:51:43 -0800
+ -- Ben Hutchings <ben@decadent.org.uk>  Thu, 07 Mar 2013 05:32:40 +0000
 
 linux-tools (3.7.1-1~experimental.1) experimental; urgency=low
 
